fix: docs and response status get user by id
